tdf#165655 oox: don't export incomplete shape data coming from VML

Some export was added in fd238380ae7820f12ac1f7c52d0f7180a93f3ba3.
This can result in only anchor pointers and no other data
saved for certain shapes having no export code, making it an
invalid file.

Change-Id: I81bf513b6ebaa9f6456a26ccbc3276e019551eca
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182699
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit ab45b8d9959f8f392a10d0874c50f26b816a4da8)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183567
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>