include/oox/export/shapes.hxx
@@ -116,6 +116,7 @@ public:
     void SetURLTranslator(const std::shared_ptr<URLTransformer>& pTransformer);
 
     static bool         NonEmptyText( const css::uno::Reference< css::uno::XInterface >& xIface );
+    static bool         IsShapeTypeKnown( const css::uno::Reference< css::drawing::XShape >& xShape );
 
     ShapeExport&
                         WritePolyPolygonShape( const css::uno::Reference< css::drawing::XShape >& xShape, bool bClosed );
